--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,9 @@
 {
   "env": {
+    "browser": true,
     "es6": true,
     "node": true,
-    "jest": true
+    //"jest": true
   },
   "extends": [
     "airbnb-base",
